# SuperCount

./: LICENSE  README.md  main.py  pyproject.toml  stats.py
.github/workflows/: release.yml
