[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "supercount"
version = "1.0.0"
description = "Analyze word count and character frequency for any text file — books, articles, scripts and more"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "VarunRazdan", email = "" }]
keywords = ["books", "text-analysis", "word-count", "character-frequency", "cli", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Linguistic",
]

[project.scripts]
supercount = "main:main"

[project.urls]
Homepage = "https://github.com/VarunRazdan/supercount"
Repository = "https://github.com/VarunRazdan/supercount"
"Bug Tracker" = "https://github.com/VarunRazdan/supercount/issues"
