[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supercount"
version = "1.0.0"
description = "Analyze word count and character frequency for any text file — books, articles, scripts and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "VarunRazdan", email = "greatlyrecommended@gmail.com" }]
keywords = ["books", "text-analysis", "word-count", "character-frequency", "cli", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]

[tool.setuptools]
py-modules = ["main", "stats"]

[project.scripts]
supercount = "main:main"

[project.urls]
Homepage = "https://github.com/VarunRazdan/supercount"
Repository = "https://github.com/VarunRazdan/supercount"
"Bug Tracker" = "https://github.com/VarunRazdan/supercount/issues"
